# openreview-crawler

./: README.md  crawler.py  main.py  pyproject.toml
configs/: emnlp_2023.yaml  iclr_2024.yaml  icml_2024.yaml  neurips_2023.yaml
outputs/ICLR-2024/: oral_paper.json
